--- a/RPS.html
+++ b/RPS.html
@@ -40,39 +40,51 @@
  
  function playRound(playerSelection, computerSelection) {
 	
+	let draw = "Draw! Try again.";
+	let rockW = "You won! Rock beats Scissors.";
+	let rockL = "You lose! Rock beats Scissors.";
+	let paperW = "You won! Paper beats rock.";
+	let paperL = "You lose! Paper beats rock.";
+	let scissorsW = "You won! Scissors beats paper.";
+	let scissorsL = "You lose! Scissors beats paper";
+
 	if ((playerSelection === "Rock") && (computerSelection === "Scissors")) {
-		console.log("You won! Rock beats Scissors.");
+		return rockW;
 	
 	} else if ((playerSelection === "Scissors") && (computerSelection === "Rock")) {
-		console.log("You lose! Rock beats Scissors.");
+		return rockL;
 	
 	} else if ((playerSelection === "Rock") && (computerSelection === "Rock")) {
-	  console.log("Draw! Try again.");
+	  return draw;
 
   } else if ((playerSelection === "Paper") && (computerSelection === "Rock")) {
-	  console.log("You won! Paper beats rock.");
+	  return paperW;
 
   } else if ((playerSelection === "Rock") && (computerSelection === "Paper")) {
-    console.log("You lose! Paper beats rock.");
+    return paperL;
   
   } else if ((playerSelection === "Paper") && (computerSelection === "Paper")) {
-    console.log("Draw! Try again.");	
+    return draw;	
   
   } else if ((playerSelection === "Scissors") && (computerSelection === "Paper")) {
-    console.log("You won! Scissors beats paper.");
+    return scissorsW;
   
   } else if ((playerSelection === "Paper") && (computerSelection === "Scissors")) {
-  	console.log("You lose! Scissors beats paper.");
+  	return scissorsL;
   
   } else if ((playerSelection === "Scissors") && (computerSelection === "Scissors")) {
-  	console.log("Draw! Try again.");
+  	return draw;
   
   } else {
   	console.log("Something goes wrong...");
   }
 }
 
-const playerSelection = "Scissors";
+function capitalize(string) {
+  return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
+}
+
+const playerSelection = capitalize("rock");
 const computerSelection = computerPlay();
 console.log(playRound(playerSelection, computerSelection));
 
