--- a/RPS.html
+++ b/RPS.html
@@ -84,10 +84,11 @@ function capitalize(string) {
   return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
 }
 
-const playerSelection = capitalize("paper");
-const computerSelection = computerPlay();
-
 function game() {
+  let proMpt = prompt("Please enter your chose");
+  const playerSelection = capitalize(proMpt);
+  const computerSelection = computerPlay();
+
 	for(let n = 0; n < 5; n++) {
 		console.log(playRound(playerSelection, computerSelection));
 	  console.log("Comp selects: " + computerSelection);
