--- a/RPS.html
+++ b/RPS.html
@@ -84,9 +84,9 @@
 
       let roundResult = playRound(playerSelection, computerSelection);
 
-      if (roundResult === playerWinArray.some()) {
+      if (playerWinArray.some((element) => element === roundResult)) {
         playerScore += 1;
-      } else if (roundResult === computerWinArray.some()) {
+      } else if (computerWinArray.some((element) => element === roundResult)) {
         computerScore += 1;
       }
 
