--- a/RPS.html
+++ b/RPS.html
@@ -26,7 +26,6 @@
     const playerScissorsWin = "You won! Scissors beats paper.";
     const playerScissorsLose = "You lose! Scissors beats paper";
     const playerWinArray = [playerRockWin, playerPaperWin, playerScissorsWin];
-    const computerWinArray = [playerRockLose, playerPaperLose, playerScissorsLose];
 
     let playerScore = 0;
     let computerScore = 0;
@@ -86,7 +85,7 @@
 
       if (playerWinArray.some((element) => element === roundResult)) {
         playerScore += 1;
-      } else if (computerWinArray.some((element) => element === roundResult)) {
+      } else if (roundResult !== draw) {
         computerScore += 1;
       }
 
@@ -104,9 +103,9 @@
     }
 
     function compareScores() {
-      if (playerScore === 5) {
+      if (playerScore >= 5) {
         alert("Congratulations! You are a winner!");
-      } else if (computerScore === 5) {
+      } else if (computerScore >= 5) {
         alert("Shame, you are a loser...");
       }
     }
